--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -58,7 +58,7 @@
 					<li ><a href="?district=&price=all&order_by=most_contract">课程数 &#8595;</a></li>
 				</ul>
 			</div>
-                {% for course_org in all_orgs%}
+                {% for course_org in all_orgs.object_list %}
                 <dl class="des difdes">
                     <dt>
                         <a href="org-detail-homepage.html">
@@ -97,9 +97,27 @@
 		</div>
 		 <div class="pageturn">
             <ul class="pagelist">
-                            <li class="active"><a href="?page=1">1</a></li>
-                            <li><a href="?page=2" class="page">2</a></li>
-                    <li class="long"><a href="?page=2">下一页</a></li>
+                 {% if all_orgs.has_previous %}
+                <li class="long"><a href="?{{ all_orgs.previous_page_number.querystring }}" class="prev">上一页</a></li>
+                {% else %}
+                {% endif %}
+                {% for page in all_orgs.pages %}
+                    {% if page %}
+                        {% ifequal page all_orgs.number %}
+                            <li class="active"><a href="?{{ page.querystring }}">{{page}}</a></li>
+                        {% else %}
+                            <li><a href="?{{ page.querystring }}" class="page">{{page}}</a></li>
+                        {% endifequal %}
+                    {% else %}
+                <li class="none"><a href="">...</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if all_orgs.has_next %}
+
+                    <li class="long"><a href="?{{ all_orgs.next_page_number.querystring }}">下一页</a></li>
+
+                {% endif %}
+
             </ul>
         </div>
 		</div>
@@ -126,7 +144,7 @@
 
 		<div class="right companyrank layout">
 			<div class="head">授课机构排名</div>
-                {% for org in all_orgs%}
+                {% for org in all_orgs.object_list %}
                 <dl class="des">
                     <dt class="num fl">1</dt>
                     <dd>
