--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -24,13 +24,13 @@
 				<li>
 					<h2>课程类别</h2>
 					<div class="cont">
-                        <a href="?order_by="><span class="active">全部</span></a>
+                        <a href="?city={{city_id}}"><span class="{% ifequal category '' %}active2{% endifequal %}">全部</span></a>
 
-                            <a href="?price=1&district="><span >收费课程</span></a>
+                            <a href="?ct=pxjg&city={{city_id}}"><span class="{% ifequal category 'pxjg' %}active2{% endifequal %}">培训机构</span></a>
 
-                            <a href="?price=2&district="><span >免费课程</span></a>
+                            <a href="?ct=gx&city={{city_id}}"><span class="{% ifequal category 'gx' %}active2{% endifequal %}">高校</span></a>
 
-                            <a href="?price=3&district="><span >培训课程</span></a>
+                            <a href="?ct=gr&city={{city_id}}"><span class="{% ifequal category 'gr' %}active2{% endifequal %}">个人</span></a>
 
 					</div>
 				</li>
@@ -38,9 +38,9 @@
 					<h2>所在地区</h2>
 					<div class="more">更多</div>
 					<div class="cont">
-                        <a href="?order_by=&price=all"><span class="active">全部</span></a>
+                        <a href="?ct={{category}}"><span class="{% ifequal city_id '' %}active2{% endifequal %}">全部</span></a>
                             {% for city in all_citys %}
-                            <a href="?district=1&price=all"><span >{{city.name}}</span></a>
+                            <a href="?city={{ city.id }}&ct={{category}}"><span class="{% ifequal city_id city.id|stringformat:'i' %}active2{% endifequal %}" >{{city.name}}</span></a>
                             {% endfor %}
 
 
@@ -144,12 +144,12 @@
 
 		<div class="right companyrank layout">
 			<div class="head">授课机构排名</div>
-                {% for org in all_orgs.object_list %}
+                {% for current_org in hot_orgs %}
                 <dl class="des">
-                    <dt class="num fl">1</dt>
+                    <dt class="num fl">{{ forloop.counter }}</dt>
                     <dd>
-                        <a href="/company/2/"><h1>{{org.name}}</h1></a>
-                        <p>{{org.address}}</p>
+                        <a href="/company/2/"><h1>{{current_org.name}}</h1></a>
+                        <p>{{current_org.address}}</p>
                     </dd>
                 </dl>
                 {% endfor %}
