--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -122,25 +122,27 @@
         </div>
 		</div>
 	</div>
-	<div class="right companyright">
-			<div class="head">我要学习</div>
-			<form class="rightform" id="jsStayForm">
-				<div>
-                    <img src="../images/rightform1.png"/>
-                    <input type="text" name="name" id="companyName" placeholder="名字" maxlength="25" />
-                </div>
-				<div>
-                    <img src="../images/rightform2.png"/>
-                    <input type="text" name="mobile" id="companyMobile" placeholder="联系电话"/>
-                </div>
-				<div>
-                    <img src="../images/rightform3.png"/>
-                    <input type="text" name="address" id="companyAddress" placeholder="课程名" maxlength="50" />
-                </div>
-                <p class="error company-tips" id="jsCompanyTips"></p>
-				<input class="btn" type="text" id="jsStayBtn" value="立即咨询 >" />
-            </form>
-		</div>
+
+<div class="right companyright">
+    <div class="head">我要学习</div>
+    <form class="rightform" id="jsStayForm">
+        <div>
+            <img src="{% static 'images/rightform1.png' %}"/>
+            <input type="text" name="name" id="companyName" placeholder="名字" maxlength="25"/>
+        </div>
+        <div>
+            <img src="{% static 'images/rightform2.png' %}"/>
+            <input type="text" name="mobile" id="companyMobile" placeholder="联系电话"/>
+        </div>
+        <div>
+            <img src="{% static 'images/rightform3.png' %}"/>
+            <input type="text" name="course_name" id="companyAddress" placeholder="课程名" maxlength="50"/>
+        </div>
+        <p class="error company-tips" id="jsCompanyTips"></p>
+        <input class="btn" type="text" id="jsStayBtn" value="立即咨询 >"/>
+        {% csrf_token %}
+    </form>
+</div>
 
 		<div class="right companyrank layout">
 			<div class="head">授课机构排名</div>
@@ -156,4 +158,31 @@
 		</div>
         </div>
 </section>
+{% endblock %}
+
+<!-------------------------用户咨询，异步请求，ｊs代码处理---------------------------------->
+{% block custom_js %}
+
+<script>
+    $(function () {
+        $('#jsStayBtn').on('click', function () {
+            $.ajax({
+                cache: false,
+                type: "POST",
+                url: "{% url "org:add_ask" %}",
+                data: $('#jsStayForm').serialize(),
+                async: true,
+                success: function (data) {
+                    if (data.status == 'success') {
+                        $('#jsStayForm')[0].reset();
+                        alert("提交成功")
+                    } else if (data.status == 'fail') {
+                        $('#jsCompanyTips').html(data.msg)
+                    }
+                },
+            });
+        });
+    })
+</script>
+
 {% endblock %}
