--- a/templates/org-detail-homepage.html
+++ b/templates/org-detail-homepage.html
@@ -34,11 +34,12 @@
         <h1>机构教师</h1>
         <a class="green fr more" href="org-detail-teachers.html">查看更多  >  </a>
     </div>
+    {% for teacher in all_teachers %}
     <div class="diarys">
         <div class="module5 share company-diary-box" style="padding:10px 0;">
             <div class="left">
-                <img class="pic" src="../images/sass.jpg"/>
-                <p>昵称：马云</p>
+                <img class="pic" src="{{MEDIA_URL}}{{ teacher.image }}"/>
+                <p>昵称：{{ teacher.name }}</p>
             </div>
             <div class="right">
                 <div class="top">
@@ -51,14 +52,14 @@
             </div>
         </div>
     </div>
-
+    {% endfor %}
 </div>
 <div class="right companycenter layout" >
     <div class="head">
         <h1>机构介绍</h1>
         <a class="green fr more" href="org-detail-desc.html">查看更多  >  </a>
     </div>
-    <div class="cont">&nbsp; &nbsp; 慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网慕课网<a href="/company/desc/22/"><span class="green">[查看更多]</span></a></div>
+    <div class="cont">&nbsp; &nbsp;{{ course_org.desc }} <a href="/company/desc/22/"><span class="green">[查看更多]</span></a></div>
 </div>
 {% endblock %}
 
