--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -59,7 +59,7 @@
 	<div class="wp">
 		<ul  class="crumbs">
             <li><a href="index.html">首页</a>></li>
-			<li><a href="/">课程机构</a>></li>
+			<li><a href="{% url 'org:org_list' %}">课程机构</a>></li>
 			<li>{% block page_path %}机构首页{% endblock %}</li>
 		</ul>
 	</div>
@@ -69,10 +69,10 @@
 	<div class="wp list personal_list comp">
 		<div class="left">
 			<ul>
-				<li class="active2"><a href="">机构首页</a></li>
-                <li ><a href="org-detail-course.html">机构课程</a></li>
-                <li ><a href="org-detail-desc.html">机构介绍</a></li>
-                <li ><a href="org-detail-teachers.html">机构讲师</a></li>
+				<li class="{% ifequal current_page 'home' %}active2{% endifequal %}"><a href="{% url 'org:org_home' course_org.id %}">机构首页</a></li>
+                <li class="{% ifequal current_page 'course' %}active2{% endifequal %}"><a href="{% url 'org:org_course' course_org.id %}">机构课程</a></li>
+                <li class="{% ifequal current_page 'desc' %}active2{% endifequal %}"><a href="{% url 'org:org_desc' course_org.id %}">机构介绍</a></li>
+                <li class="{% ifequal current_page 'teacher' %}active2{% endifequal %}"><a href="{% url 'org:org_teacher' course_org.id %}">机构讲师</a></li>
 			</ul>
 		</div>
 
