--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -47,7 +47,7 @@
             </div>
             <div class="btn fr collectionbtn  notlogin
                  "data-favid="22" data-fav-type="1">
-                 收藏
+                 {% if has_fav %}已收藏{% else %}收藏{% endif %}
             </div>
 
         </div>
@@ -174,6 +174,39 @@
 
 <script type="text/javascript" src="{% static 'js/plugins/jquery.raty.js' %}"></script>
 <script type="text/javascript">
+  //收藏分享
+//收藏分享
+function add_fav(current_elem, fav_id, fav_type){
+    $.ajax({
+        cache: false,
+        type: "POST",
+        url:"{% url 'org:add_fav' %}",
+        data:{'fav_id':fav_id, 'fav_type':fav_type},
+        async: true,
+        beforeSend:function(xhr, settings){
+            xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
+        },
+        success: function(data) {
+            if(data.status == 'fail'){
+                if(data.msg == '用户未登录'){
+                    window.location.href="/login/";
+                }else{
+                    alert(data.msg)
+                }
+
+            }else if(data.status == 'success'){
+                current_elem.text(data.msg)
+            }
+        },
+    });
+}
+
+
+$('.collectionbtn').on('click', function(){
+    add_fav($(this), {{ course_org.id }},2);
+});
+
+
 $(function(){
     var $precision = $('.precision'),
         score = $precision.attr('data-star-scope'),
