--- a/templates/course-list.html
+++ b/templates/course-list.html
@@ -27,7 +27,7 @@
                 <div id="inWindow">
                     <div class="tab_cont " id="content">
 					<div class="group_list">
-                            {% for course in all_courses %}
+                            {% for course in all_courses.object_list %}
                             <div class="box">
                                 <a href="/group/groupdetail/15/">
                                     <img width="280" height="350" class="scrollLoading" src="{{ MEDIA_URL }}{{ course.image }}"/>
@@ -49,11 +49,33 @@
                             </div>
                             {% endfor %}
 					</div>
+
                     <div class="pageturn">
-                        <ul class="pagelist">
-                                        <li class="active"><a href="?page=1">1</a></li>
-                        </ul>
-                    </div>
+            <ul class="pagelist">
+                 {% if all_courses.has_previous %}
+                <li class="long"><a href="?{{ all_courses.previous_page_number.querystring }}" class="prev">上一页</a></li>
+                {% else %}
+                {% endif %}
+                {% for page in all_courses.pages %}
+                    {% if page %}
+                        {% ifequal page all_courses.number %}
+                            <li class="active"><a href="?{{ page.querystring }}">{{page}}</a></li>
+                        {% else %}
+                            <li><a href="?{{ page.querystring }}" class="page">{{page}}</a></li>
+                        {% endifequal %}
+                    {% else %}
+                <li class="none"><a href="">...</a></li>
+                    {% endif %}
+                {% endfor %}
+                {% if all_courses.has_next %}
+
+                    <li class="long"><a href="?{{ all_courses.next_page_number.querystring }}">下一页</a></li>
+
+                {% endif %}
+
+            </ul>
+        </div>
+
 				</div>
                 </div>
 			</div>
