--- a/templates/course-detail.html
+++ b/templates/course-detail.html
@@ -75,13 +75,12 @@
 					</div>
 					<div class="pic">
                         <a href="/company/14/">
-                            <img width="150" height="80" src="{% static 'images/qhdx.jpg' %}"/>
+                            <img width="150" height="80" src="{{ MEDIA_URL}}{{ course.course_org.image }}"/>
                         </a>
                     </div>
 					<a href="/company/14/">
-                        <h2 class="center" title="清华大学">清华大学</h2>
+                        <h2 class="center" title="清华大学">{{ course.course_org.name }}</h2>
                     </a>
-					<p class="center tell">电话：123123123</p>
 					<div class="btn  notlogin
 					     "data-favid="14" id="jsRightBtn">
                          收藏
@@ -89,18 +88,12 @@
 					<div class="clear">
 						<ul>
                             <li>
-                                <span>课 &nbsp;程&nbsp; 数：&nbsp;&nbsp;世界名校</span>
+                                <span>课 &nbsp;程&nbsp; 数：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   {{ course.course_org.course_nums }}</span>
                             </li>
                             <li>
-                                <span>课 &nbsp;程&nbsp; 数：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   10</span>
+                                <span>教 &nbsp;师&nbsp; 数：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  {{ course.course_org.get_teacher_nums }}</span>
                             </li>
-                            <li>
-                                <span>教 &nbsp;师&nbsp; 数：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  10</span>
-                            </li>
-                            <li>
-                                <span>推 &nbsp;荐&nbsp; 课：&nbsp;&nbsp;django实战</span>
-                            </li>
-							<li>所在地区：&nbsp;&nbsp;北京市五道口</li>
+							<li>所在地区：&nbsp;&nbsp;{{ course.course_org.address }}</li>
 							<li>认&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;证&nbsp;:
                                 &nbsp;&nbsp;
 								    <img title="金牌机构", src="{% static 'images/gold.png' %}"/>
@@ -119,11 +112,11 @@
 			<div class="left layout">
 				<div class="head">
 					<ul class="tab_header">
-						<li class="active">产品详细</li>
+						<li class="active">课程详细</li>
 					</ul>
 				</div>
 				<div class="tab_cont tab_cont1">
-					<p><img src="/uploads/Entity/2016/06/blob_20160628155929_251.png" title="" alt="blob.png"/> </p><p><img src="/uploads/Entity/2016/06/blob_20160628155959_248.png" title="" alt="blob.png"/> </p><p><img src="/uploads/Entity/2016/06/blob_20160628160023_538.png" title="" alt="blob.png"/> </p><p><img src="/uploads/Entity/2016/06/blob_20160628160055_798.png" title="" alt="blob.png"/> </p><p><img src="/uploads/Entity/2016/06/blob_20160628160119_462.png" title="" alt="blob.png"/> </p>
+					{{ course.detail }}
 				</div>
 				<div class="tab_cont tab_cont2" >
 					<div class="comment">
@@ -135,7 +128,19 @@
 			</div>
 			<div class="right layout">
 				<div class="head">相关课程推荐</div>
-
+				{% for relate_course in relate_courses %}
+				<dl>
+					<dt>
+						<a target="_blank" href="#">
+						<img width="240" height="220"class="scrollLoading" src="{{ MEDIA_URL }}{{relate_course.image}}"/>
+						</a>
+					</dt>
+					<dd>
+						<a target="_blank" href="#"><h2>{{ relate_course.name}}</h2></a>
+						<span class="fl">学习时长:<i class="key">{{ relate_course.learn_times }}</i></span>
+					</dd>
+				</dl>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
